--- a/app.json
+++ b/app.json
@@ -24,7 +24,16 @@
       "**/*"
     ],
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.blade.happenly"
+    },
+    "android": {
+      "package": "com.blade.happenly",
+      "config": {
+        "googleMaps": {
+          "apiKey": "AIzaSyAn8jM6GqAeE0UhQjJohWWci0Qcf5GQXjY"
+        }
+      }
     }
   }
 }
