--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-native-gesture-handler": "~1.3.0",
     "react-native-image-slider": "^2.0.3",
     "react-native-image-slider-show": "^1.0.3",
+    "react-native-loading-spinner-overlay": "^1.0.1",
     "react-native-maps": "0.25.0",
     "react-native-snap-carousel": "^3.8.0",
     "react-native-web": "^0.11.4",
