--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "expo-asset": "^6.0.0",
     "expo-constants": "6.0.0",
     "expo-font": "~6.0.0",
+    "expo-image-picker": "~6.0.0",
     "expo-web-browser": "6.0.0",
     "react": "16.8.3",
     "react-dom": "^16.8.6",
