--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-native-loading-spinner-overlay": "^1.0.1",
     "react-native-maps": "~0.24.0",
     "react-native-snap-carousel": "^3.8.0",
+    "react-native-swiper": "^1.5.14",
     "react-native-web": "^0.11.4",
     "react-navigation": "^3.11.0"
   },
